@@ -43,11 +43,40 @@ namespace ts {
     //! This is a private descriptor, must be preceeded by the EACEM/EICTA PDS.
     //! @see EACEM Technical Report Number TR-030, 9.2.11.2.
     //!
-    //! Incomplete implementation, to be completed.
-    //!
-    class TSDUCKDLL EacemPreferredNameListDescriptor
+    class TSDUCKDLL EacemPreferredNameListDescriptor : public AbstractDescriptor
     {
     public:
+        //!
+        //! Maximum number of preferred names per descriptor.
+        //! Defined in EACEM TR-030, 9.2.11.2.
+        //!
+        static const size_t MAX_PREFERRED_NAMES = 5;
+
+        //!
+        //! For each language, there is a map of service names per 8-bit name_id.
+        //!
+        typedef std::map<uint8_t, UString> NameByIdMap;
+
+        //!
+        //! There is a map of service name sets per language.
+        //!
+        typedef std::map<UString, NameByIdMap> LanguageMap;
+
+        // EacemPreferredNameListDescriptor public members:
+        LanguageMap entries;  //!< Map of language entries.
+
+        //!
+        //! Default constructor.
+        //!
+        EacemPreferredNameListDescriptor();
+
+        //!
+        //! Constructor from a binary descriptor
+        //! @param [in] bin A binary descriptor to deserialize.
+        //! @param [in] charset If not zero, character set to use without explicit table code.
+        //!
+        EacemPreferredNameListDescriptor(const Descriptor& bin, const DVBCharset* charset = 0);
+
         //!
         //! Static method to display a descriptor.
         //! @param [in,out] display Display engine.
@@ -59,5 +88,11 @@ namespace ts {
         //! @param [in] pds Private Data Specifier. Used to interpret private descriptors.
         //!
         static void DisplayDescriptor(TablesDisplay& display, DID did, const uint8_t* payload, size_t size, int indent, TID tid, PDS pds);
+
+        // Inherited methods
+        virtual void serialize(Descriptor&, const DVBCharset* = 0) const override;
+        virtual void deserialize(const Descriptor&, const DVBCharset* = 0) override;
+        virtual void buildXML(xml::Element*) const override;
+        virtual void fromXML(const xml::Element*) override;
     };
 }
